--- a/templates/accounts/home.html
+++ b/templates/accounts/home.html
@@ -4,7 +4,9 @@
     <title>Home</title>
 </head>
 <body>
-    <h1>خوش آمدید، {{ request.user.username }}!</h1>
+
+    <h1>خوش آمدید، {{ request.user.username|escape }}!</h1>
     <a href="{% url 'logout' %}">Logout</a>
+
 </body>
 </html>
