--- a/templates/shop/product_detail.html
+++ b/templates/shop/product_detail.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>{{ product.name }}</title>
+    <title>{{ product.name|escape }}</title>
 </head>
 <body>
-    <h1>{{ product.name }}</h1>
+
+    <h1>{{ product.name|escape }}</h1>
     <p>Price: {{ product.price }}</p>
-    <p>Description: {{ product.description }}</p>
+    <p>Description: {{ product.description|escape|linebreaksbr }}</p>
+
 </body>
 </html>
